--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "echarts": "^3.7.0",
     "marked": "^0.3.6",
     "mavon-editor": "^2.1.12",
     "vue": "^2.3.3",
